--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "lookaround-react",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^0.12.2",
+    "react-router": "^0.11.6"
+  },
   "devDependencies": {
     "del": "~0.1.3",
     "gulp": "~3.8.8",
@@ -28,20 +31,20 @@
     "node": ">=0.10.0"
   },
   "browserify": {
-      "transform": [
-          "browserify-shim",
-          [
-            "reactify",
-            {
-                "es6": true
-            }
-          ]
+    "transform": [
+      "browserify-shim",
+      [
+        "reactify",
+        {
+          "es6": true
+        }
       ]
+    ]
   },
   "browser": {
-      "jquery": "./app/bower_components/jquery/dist/jquery.js"
+    "jquery": "./app/bower_components/jquery/dist/jquery.js"
   },
   "browserify-shim": {
-      "jquery": "$"
+    "jquery": "$"
   }
 }
