--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "react": "^0.12.2",
+    "react-bootstrap": "^0.13.0",
     "react-router": "^0.11.6"
   },
   "devDependencies": {
