--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "lookaround-react",
   "version": "0.0.0",
   "dependencies": {
+    "lodash": "^2.4.1",
     "react": "^0.12.2",
     "react-bootstrap": "^0.13.0",
-    "react-router": "^0.11.6"
+    "react-router": "^0.11.6",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
     "del": "~0.1.3",
