--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,9 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
-  "white": true
+  "white": true,
+  "jasmine": true,
+  "predef": {
+    "jest": true
+  }
 }
